--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 <body>
   <main>
     <form action="" method="get">
-      <label for="id">DIGITE O ID DO PERSONAGEM:</label>
-      <input type="number" name="id" id="id">
-      <input type="button" value="ENVIAR" id="button">
+      <input type="button" value="SORTEAR PERSONAGEM" id="button">
     </form>
     <div>
       <h1 id="name"></h1>
